@@ -21,70 +21,68 @@ package org.yawlfoundation.yawl.elements.data;
 import org.junit.jupiter.api.Test;
 import static org.junit.jupiter.api.Assertions.*;
 
-import java.util.Optional;
+import java.util.Arrays;
+import java.util.List;
+import java.util.stream.Collectors;
 
 /**
- * Test class to verify the Optional migration for YVariable methods.
- *
- * @author Claude Migration Assistant
- * @date 2026-02-25
+ * Tests for YVariable getInitialValue() and getDefaultValue() — both return String.
  */
 public class YVariableOptionalTest {
 
     @Test
     public void testGetInitialValueWhenPresent() {
-        // Test when initial value is set
         YVariable variable = new YVariable();
         variable.setInitialValue("testValue");
 
-        Optional<String> result = variable.getInitialValue();
+        String result = variable.getInitialValue();
 
-        assertTrue(result.isPresent());
-        assertEquals("testValue", result.get());
+        assertNotNull(result);
+        assertEquals("testValue", result);
     }
 
     @Test
     public void testGetInitialValueWhenAbsent() {
-        // Test when initial value is null (not set)
         YVariable variable = new YVariable();
 
-        Optional<String> result = variable.getInitialValue();
+        String result = variable.getInitialValue();
 
-        assertFalse(result.isPresent());
-        assertTrue(result.isEmpty());
+        assertNull(result);
     }
 
     @Test
-    public void testGetInitialValueOrElse() {
+    public void testGetInitialValueOrElsePattern() {
         YVariable variable1 = new YVariable();
         variable1.setInitialValue("actualValue");
 
         YVariable variable2 = new YVariable();
 
-        // Test orElse with present value
-        String result1 = variable1.getInitialValue().orElse("default");
+        // Null-safe pattern using String API
+        String result1 = variable1.getInitialValue() != null ? variable1.getInitialValue() : "default";
         assertEquals("actualValue", result1);
 
-        // Test orElse with absent value
-        String result2 = variable2.getInitialValue().orElse("default");
+        String result2 = variable2.getInitialValue() != null ? variable2.getInitialValue() : "default";
         assertEquals("default", result2);
     }
 
     @Test
-    public void testGetInitialValueIfPresent() {
+    public void testGetInitialValueIfPresentPattern() {
         YVariable variable1 = new YVariable();
         variable1.setInitialValue("test");
 
         YVariable variable2 = new YVariable();
 
-        // Test ifPresent with value present
+        // Null-safe ifPresent pattern
         StringBuilder captured = new StringBuilder();
-        variable1.getInitialValue().ifPresent(captured::append);
+        if (variable1.getInitialValue() != null) {
+            captured.append(variable1.getInitialValue());
+        }
         assertEquals("test", captured.toString());
 
-        // Test ifPresent with value absent
         StringBuilder empty = new StringBuilder();
-        variable2.getInitialValue().ifPresent(empty::append);
+        if (variable2.getInitialValue() != null) {
+            empty.append(variable2.getInitialValue());
+        }
         assertEquals("", empty.toString());
     }
 
@@ -93,24 +91,23 @@ public class YVariableOptionalTest {
         YVariable variable = new YVariable();
         variable.setDefaultValue("defaultValue");
 
-        Optional<String> result = variable.getDefaultValue();
+        String result = variable.getDefaultValue();
 
-        assertTrue(result.isPresent());
-        assertEquals("defaultValue", result.get());
+        assertNotNull(result);
+        assertEquals("defaultValue", result);
     }
 
     @Test
     public void testGetDefaultValueWhenAbsent() {
         YVariable variable = new YVariable();
 
-        Optional<String> result = variable.getDefaultValue();
+        String result = variable.getDefaultValue();
 
-        assertFalse(result.isPresent());
+        assertNull(result);
     }
 
     @Test
     public void testStreamProcessingExample() {
-        // Create multiple variables with different states
         YVariable var1 = new YVariable();
         var1.setInitialValue("value1");
 
@@ -120,12 +117,10 @@ public class YVariableOptionalTest {
         YVariable var3 = new YVariable();
         // No initial value
 
-        // Stream processing example
-        java.util.List<String> values = java.util.List.of(var1, var2, var3).stream()
+        List<String> values = Arrays.asList(var1, var2, var3).stream()
             .map(YVariable::getInitialValue)
-            .filter(Optional::isPresent)
-            .map(Optional::get)
-            .collect(java.util.stream.Collectors.toList());
+            .filter(v -> v != null)
+            .collect(Collectors.toList());
 
         assertEquals(2, values.size());
         assertTrue(values.contains("value1"));
@@ -134,13 +129,20 @@ public class YVariableOptionalTest {
 
     @Test
     public void testNullSafety() {
-        // Verify no NullPointerException can occur
         YVariable variable = new YVariable();
 
-        // These operations should never throw NPE
-        assertDoesNotThrow(() -> variable.getInitialValue().isPresent());
-        assertDoesNotThrow(() -> variable.getInitialValue().isEmpty());
-        assertDoesNotThrow(() -> variable.getInitialValue().orElse("safe"));
-        assertDoesNotThrow(() -> variable.getInitialValue().ifPresent(v -> {}));
+        // Verify no NullPointerException when calling on set value
+        assertDoesNotThrow(() -> {
+            String val = variable.getInitialValue();
+            // Safe null check pattern
+            boolean hasValue = val != null;
+            assertFalse(hasValue, "Unset variable must return null");
+        });
+
+        assertDoesNotThrow(() -> {
+            String val = variable.getDefaultValue();
+            boolean hasValue = val != null;
+            assertFalse(hasValue, "Unset variable must return null default");
+        });
     }
 }
